# scene-reconstruction

./: CMakeLists.txt  points3d.txt  run_reconstruct.sh  sfm.cpp  tracks2d.txt
